# roadrunner-filament-sensor

./: .gitignore  .gitmodules  README.md  install.sh
STLs/: [a]_cover.stl  [c]_led_diffuser.stl  body_part_a.stl  body_part_b.stl  idler.stl  led_diffuser.stl  magnet_holder.stl  wire_cover.stl
klippy/extras/: high_resolution_filament_sensor.py  high_resolution_filament_sensor_calibration.py  non_linear_extrusion.py
manual/: ASSEMBLY.md  BOM.md  WIRING.md
rp2040/: CMakeLists.txt  README.md  as5600.c  as5600.h  i2c_target.c  i2c_target.h  ir_sensor.c  ir_sensor.h  main.c  neopixel.c  neopixel.h  tmcuart.c  tmcuart.h  uartserial.c  uartserial.h  usbserial.c  usbserial.h
script/: README.md  live.py  main.py  replay.py  requirements.txt  server.py
script/assets/css/: highcharts.css  index.css
script/assets/js/: app.js
script/html/: index.html
